Add quoted-printable and utf8 dependencies; implement QP decoding in App component

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
     "antd": "^6.3.0",
+    "quoted-printable": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "utf8": "^3.0.0",
     "vcard-parser": "^1.0.0",
     "vcf": "^2.1.2"
   },
