--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.1.0",
     "antd": "^6.3.0",
     "i18next": "^25.8.13",
+    "qrcode": "^1.5.4",
     "quoted-printable": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
